I added the background image for the welcome lobby and also made a new stylesheet just for the welcome lobby that matches with the background. I also added javadoc